--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "ng": "ng",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config ./proxy.conf.json",
     "build": "ng build --prod --aot --buildOptimizer --commonChunk --vendorChunk --optimization --progress",
     "test": "ng test",
     "lint": "ng lint",
@@ -51,7 +51,7 @@
     "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
     "ng2-charts": "^2.4.2",
-    "ng4-loading-spinner": "^1.2.3",
+    "ng4-loading-spinner": "^1.2.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-toastr": "^12.0.0",
