--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "font-awesome": "^4.7.0",
     "ng2-charts": "^2.4.2",
     "ng4-loading-spinner": "^1.2.0",
+    "ngx-avatar": "^4.1.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-toastr": "^12.0.0",
