--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/icons-angular": "1.0.0-alpha.3",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "angular-star-rating": "^4.0.0-beta.3",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "classlist.js": "^1.1.20150312",
