--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
             ],
             "styles": [
               "node_modules/@coreui/icons/css/free.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/flag-icon-css/css/flag-icon.css",
               "node_modules/font-awesome/css/font-awesome.css",
