--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/icons-angular": "1.0.0-alpha.3",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@types/core-js": "^2.5.5",
+    "@videogular/ngx-videogular": "^4.2.0",
     "angular-star-rating": "^4.0.0-beta.3",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
@@ -57,6 +59,7 @@
     "ngx-bootstrap": "^6.2.0",
     "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-toastr": "^12.0.0",
+    "ngx-videogular": "^13.2.2",
     "rxjs": "^6.6.6",
     "simple-line-icons": "^2.5.5",
     "ts-helpers": "^1.1.2",
